# strava

./: .coveragerc  .gitignore  manage.py  pyproject.toml  pytest.ini
project/config/: urls.py
project/config/settings/: base.py  production.py  testing.py
project/goals/: apps.py  forms.py  managers.py  models.py  test_views.py  urls.py  views.py
project/goals/lib/: page_getter.py  page_parser.py  utils.py  writer.py
project/goals/management/commands/: cron.py
project/goals/migrations/: 0001_initial.py  0002_remove_athletemodel_slug.py  0003_rename_entrymodel_activities_and_more.py  0004_logs.py  0005_logs_message_logs_status.py  0006_alter_goals_month.py  0007_alter_goals_month.py  0008_alter_activities_ascent_alter_activities_distance.py  0009_alter_activities_moving_time_and_more.py  0010_alter_goals_options_alter_goals_hours_and_more.py  0011_rename_goals_goal.py
project/goals/mixins/: views.py
project/goals/services/: index.py  year.py
project/goals/templates/goals/: admin.html  goal_confirm_delete.html  goal_form.html  goal_list.html  index.html  login.html  table.html  year.html
project/goals/templates/goals/partials/: form_errors.html
project/goals/templatetags/: filters.py
project/goals/tests/: factories.py  test_forms.py  test_lib_page_parser.py  test_lib_writer.py  test_models.py  test_services_year.py  test_templatetags.py  test_utils.py  test_views.py
project/static/css/: main.css  main.css.map
project/static/highcharts/themes/: theme.js
project/static/js/: chart_goals.js  chart_year.js  modal.js
project/static/js/highcharts_themes/: my-theme.js
project/templates/: 403.html  404.html  500.html  base.html
requirements/: base.txt  develop.txt
sass/sass/: _alert.scss  _buttons.scss  _forms.scss  _grid.scss  _modal.scss  _normalize.scss  _table.scss  _variables.scss  main.scss
