[project]
name = "strava"
version = "0.1.0"
description = "strava statistic"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "crispy-bootstrap5>=2024.10",
    "django>=5.1.4",
    "django-crispy-forms>=2.3",
    "django-debug-toolbar[dev]>=4.4.6",
    "django-extensions[dev]>=3.2.3",
    "django-htmx>=1.21.0",
    "django-test-plus[dev]>=2.2.4",
    "django-vanilla-views>=3.0.0",
    "mysqlclient>=2.2.6",
    "pendulum>=3.0.0",
    "polars>=1.19.0",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "django-test-plus>=2.2.4",
    "django-test-without-migrations>=0.6",
    "django-webtest>=1.9.12",
    "factory-boy>=3.3.1",
    "mock>=5.1.0",
    "pytest>=8.3.4",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.0.0",
    "pytest-diff>=0.1.14",
    "pytest-django>=4.9.0",
    "pytest-factoryboy>=2.7.0",
    "pytest-forked>=1.6.0",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.14.0",
    "pytest-raises>=0.11",
    "pytest-randomly>=3.16.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "pytz>=2024.2",
    "ruff>=0.8.6",
    "selenium>=4.27.1",
    "time-machine>=2.16.0",
    "webdriver-manager>=4.0.2",
]

[tool.ruff.lint]
select = ["E", "N", "R", "I"]
