[project]
name = "strava"
version = "0.1.0"
description = "strava statistic"
readme = "README.md"
requires-python = ">=3.13.5"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "crispy-bootstrap5>=2026.3",
    "django>=6.0.3",
    "django-crispy-forms>=2.6",
    "django-debug-toolbar[dev]>=6.2.0",
    "django-extensions[dev]>=4.1",
    "django-htmx>=1.27.0",
    "django-test-plus[dev]>=2.4.1",
    "django-vanilla-views>=3.0.0",
    "mysqlclient>=2.2.8",
    "pendulum>=3.2.0",
    "polars>=1.38.1",
    "setuptools>=82.0.0",
    "undetected-chromedriver>=3.5.5",
]

[project.optional-dependencies]
dev = [
    "django-debug-toolbar>=4.4.6",
    "django-extensions>=3.2.3",
    "django-test-plus>=2.2.4",
    "django-test-without-migrations>=0.6",
    "django-webtest>=1.9.12",
    "factory-boy>=3.3.1",
    "mock>=5.1.0",
    "pytest>=8.3.4",
    "pytest-clarity>=1.0.1",
    "pytest-cov>=6.0.0",
    "pytest-diff>=0.1.14",
    "pytest-django>=4.9.0",
    "pytest-factoryboy>=2.7.0",
    "pytest-forked>=1.6.0",
    "pytest-icdiff>=0.9",
    "pytest-mock>=3.14.0",
    "pytest-raises>=0.11",
    "pytest-randomly>=3.16.0",
    "pytest-sugar>=1.0.0",
    "pytest-xdist>=3.6.1",
    "pytz>=2024.2",
    "ruff>=0.8.6",
    "selenium>=4.27.1",
    "time-machine>=2.16.0",
    "webdriver-manager>=4.0.2",
]
production = [
    "gunicorn>=23.0.0",
]

[tool.ruff.lint]
select = [
    "E",
    "N",
    "R",
    "I",
]
